# NCPD-Punk-BUSTR

./: main (copy).py  main.py  punk.py  pyproject.toml  readme.md  role.py  saveLoadExport.py  skill.py  uni.py
OLD/: first_names
OLD/campaigns/: campaign.py
OLD/characters/: character.py  first_names  newCharacter.py  roles_cc (OGL).csv
OLD/database/: database.py
OLD/players/: player.py
OLD/skills/: skills.csv
characters/: character.py  ff23.pnk  last_names  lifepath.py  punk.py  roles.csv  roles_cc.csv  test.pnk
files/: EXPORT  first_names  roles.csv  roles_cc (OGL).csv  skills.csv
objects/: object.py
punks/: punk.py
pytermtk/: fullCharacterSheet.py  landing.py  login.py  viewCharacters.py
skills/: skills.py  skills_cc (copy).csv  skills_cc.csv
